--- a/configs/data/us_minute.yaml
+++ b/configs/data/us_minute.yaml
@@ -11,10 +11,8 @@ openbb_output_type: "dataframe"  # Default output type
 
 # dataframe settings
 ticker: "AAPL"
-train_date: "2024-11-01"
-val_date: "2024-11-04"
-test_date: "2024-11-06"
+train_date: ["2024-10-21", "2024-10-30"]  # Start and end date for training
+val_date: ["2024-10-31", "2024-11-04"]    # Start and end date for validation
+test_date: ["2024-11-05", "2024-11-06"]   # Start and end date for testing
 interval: "1m"
 market: "US"
-
-valid_time_split: "2024-11-04 00:00:00" # interactions with timestamp before this data will be used for training
