--- a/configs/experiment/lstm_aapl_nov.yaml
+++ b/configs/experiment/lstm_aapl_nov.yaml
@@ -13,7 +13,7 @@ defaults:
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["lstm", "appl", "high_freq", "mseloss", "nov"]
+tags: ["lstm", "aapl", "high_freq", "mseloss", "nov"]
 
 seed: 42
 
