--- a/configs/experiment/lstm_us_1m.yaml
+++ b/configs/experiment/lstm_us_1m.yaml
@@ -14,8 +14,8 @@ tags: ["lstm", "aapl", "1m"]
 
 seed: 42
 
-data:
-  selected_tickers: ["AAPL", "MSFT"]
+# data:
+#   selected_tickers: ["AAPL", "MSFT"]
 
 callbacks:
   early_stopping:
