--- a/configs/data/us_minute.yaml
+++ b/configs/data/us_minute.yaml
@@ -11,7 +11,7 @@ max_prediction_length: 6
 
 # dataframe settings
 selected_tickers: null
-index: "sp500"
+index: "nasdaq"
 train_date: ["2024-01-01", "2024-09-30"]  # Start and end date for training
 val_date: ["2024-10-01", "2024-11-06"]    # Start and end date for validation
 test_date: ["2024-11-06", "2024-11-07"]   # Start and end date for testing - ELECTION PERIOD
