--- a/configs/data/us_daily.yaml
+++ b/configs/data/us_daily.yaml
@@ -12,12 +12,12 @@ openbb_output_type: "dataframe"
 scraping_date: ["2024-01-01", "2024-12-31"]  # Start and end date for data collection
 
 # training settings
-train_date: ["2024-01-05", "2024-09-30"]     # Start and end date for training
-val_date: ["2024-10-01", "2024-11-06"]       # Start and end date for validation
-test_date: ["2024-11-06", "2024-11-07"]      # Start and end date for testing
+train_date: ["2024-01-01", "2024-09-30"]  # Start and end date for training
+val_date: ["2024-10-01", "2024-11-05"]    # Start and end date for validation
+test_date: ["2024-11-06", "2024-11-07"]   # Start and end date for testing - ELECTION PERIOD
 
 # dataframe settings
 selected_tickers: null
-index: "nasdaq"
-interval: "1m"
+index: "sp500"
+interval: "1d"
 market: "US"
