--- a/configs/experiment/lstm_us_1m.yaml
+++ b/configs/experiment/lstm_us_1m.yaml
@@ -15,7 +15,7 @@ tags: ["lstm", "aapl", "1m"]
 seed: 42
 
 # data:
-#   selected_tickers: ["AAPL", "MSFT"]
+#   selected_tickers: ["AAPL", "MSFT"] # Instead of downloading all tickers you can filter them
 
 callbacks:
   early_stopping:
